Cambio temporal de Kaggle API solo para ejecutar en local con entorno de Colab

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,8 @@ Archivos de logs y resultados intermedios
 
 ¡Nunca subas tus credenciales de API!
 
-.kaggle/
-kaggle.json
+#.kaggle/
+#kaggle.json
 
 ------------------------------------
 
